src/test/deca/syntax/invalid/decl_missing_semi.deca

// Description :
// Point-virgule manquant après une déclaration
//
// Resultats :
// Erreur syntaxique
// Regle : decl_var_set : type list_decl_var ';'

{
    int x = 5
}